--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,17 +2,22 @@ body
 {
     margin: 0px;
     padding: 0px;
-      
 }
 
 div#bannersup
 {
     width: 100%;
     height: 200px;
-    background-color: #e6e8fA;
+    background-color: #fff;
     position: absolute;
     padding: 20px 10px;
     top: 0px;
+}
+
+div#bannersup #logo img
+{
+    width: auto;
+    height: 200px;
 }
 
 div#fotoroupa1 figure img
